# prospect

./: .gitignore  README.md  components.json  package.json  tsconfig.json  vite.config.ts
.cursor/rules/: backend-coding-rule.mdc
.github/workflows/: feature.yml
.react-router/types/app/+types/: layout.ts
.react-router/types/app/routes/+types/: home.ts
ai_doc/DDDの集約/: コンテキスト別フォルダ構成.md
app/: layout.tsx  logging.ts  main.tsx  react-router.config.ts  root.tsx  routes.ts
app/components/: theme-provider.tsx
app/components/ui/: button.tsx  separator.tsx  sheet.tsx  sidebar.tsx  tooltip.tsx
app/ctx/: PaletteModeCtx.ts
app/providers/: CustomTheme.tsx  CustomThemeProvider.tsx  index.tsx
app/routes/: _index.tsx  home.tsx
app/tuari/command/: index.ts
src-tauri/: Cargo.toml  Makefile.toml  development.env  tauri.conf.json
src-tauri/bindings/: sample.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/ipc-if/: Cargo.toml
src-tauri/ipc-if/bindings/: sample.ts
src-tauri/ipc-if/src/: sample.rs
src-tauri/migration/: Cargo.toml  README.md
src-tauri/migration/src/: lib.rs  m20220101_000001_tse_table.rs
src-tauri/src/: application.rs  database.rs  domain.rs  error.rs  lib.rs  main.rs  router.rs
src-tauri/src/application/: tokyo_stock_exchange.rs
src-tauri/src/application/tokyo_stock_exchange/: import_files.rs
src-tauri/src/domain/: shared_kernel.rs
src-tauri/src/domain/shared_kernel/: created_at.rs  id.rs  updated_at.rs
src-tauri/src/domain/tokyo_stock_exchange/: english_name.rs  japanese_name.rs  local_code.rs  mod.rs  repository.rs  section.rs  sector17_code.rs  sector33_code.rs  size_code.rs  tokyo_stock_exchange.rs
src-tauri/src/infrastructure/persistence/: repositories.rs
src-tauri/src/infrastructure/persistence/entities/: mod.rs  prelude.rs  tokyo_stock_exchanges.rs
src-tauri/src/infrastructure/persistence/repositories/: tokyo_stock_exchange_repository.rs
