[package]
name = "prospect"
description = "A Tauri App"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[workspace]
members = ["ipc-if", "migration"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Toshiki"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "prospect_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
ipc-if = { path = "./ipc-if" }
migration = { path = "./migration" }
anyhow = "1.0.97"
axum = "0.8.1"
sea-orm = { version = "1.1.7", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.140"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-log = "2.2.3"
tauri-plugin-opener = "2.2.6"
tauri-plugin-store = "2.2.0"
thiserror = "2.0.12"
tokio = { workspace = true, features = ["full"] }
tower = "0.5.2"
tauri-plugin-fs = "2"

[workspace.dependencies]
serde = "1.0.218"
tokio = "1.44.0"
ts-rs = "10.1.0"
